# KaziBoost

./: .gitignore  PRD.md  README.md  package.json  pi-island-left-align.patch  pi-island-right-align.patch  plan.md  pyproject.toml  requirements.md
.github/workflows/: ci.yml
.junie/: guidelines.md  model-routing.yaml  subagents.yaml
.junie/skills/: domain-kenyan-sme-growth.md  seo-localization-kenya.md  whatsapp-mpesa-integration.md
.pi/: settings.json
.pi/extensions/: funny-status.ts
apps/web/: README.md
docs/api/: error-codes.md
tests/api/: test_analytics_dashboard_zero_days_guard.py  test_analytics_funnel.py  test_analytics_reporting.py  test_analytics_schedule_filters.py  test_analytics_schedule_frequency_filter.py  test_analytics_trend_snapshot.py  test_api_contract_examples.py  test_audit_events.py  test_auth_logout_revoke.py  test_auth_rbac_role_management.py  test_auth_tenant_bootstrap.py  test_crm_campaign_history_filters.py  test_crm_campaign_stats.py  test_crm_campaigns.py  test_crm_compliance_tools.py  test_crm_contact_notes.py  test_crm_contacts_consent_filter.py  test_crm_lead_capture.py  test_crm_lead_sources_summary.py  test_crm_segments.py  test_crm_segments_management.py  test_crm_tag_breakdown.py  test_hardening_auth_headers.py  test_hardening_auth_security.py  test_hardening_input_validation.py  test_hardening_openapi_contracts.py  test_hardening_request_id.py  test_observability_metrics.py  test_onboarding_checklist.py  test_payments_callback_reconciliation.py  test_payments_export_csv.py  test_payments_failures_log.py  (+42 more)
(+18 files in other folders)
