[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaziboost"
version = "0.1.0"
description = "KaziBoost API and platform scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic[email]>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "apps/api"}

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["kaziboost_api*"]

[tool.pytest.ini_options]
pythonpath = ["apps/api"]
testpaths = ["tests"]
addopts = "-q"
